tests/fixtures/errors/alias_cycle.z
# Mutually recursive unit-level aliases never resolve to a real type.
Alpha: alias_cycle.Beta
Beta: alias_cycle.Alpha

probe: function {x: Alpha} is {
    print "never"
}

main: function is {
    probe x: 1
}
